--- a/app/assets/stylesheets/ideas.scss
+++ b/app/assets/stylesheets/ideas.scss
@@ -1,3 +1,203 @@
 // Place all the styles related to the ideas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.row_doppler {
+	position: relative;
+	font-size: 0;
+}
+
+.col_doppler {
+	position: relative;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	font-size: 0;
+	width: 30%;
+	margin: 2% 1.665% 4%;
+	transition: .3s;
+	border-radius: 20px;
+	overflow: hidden;
+	box-shadow: 0 34px 30px -25px rgba(20, 152, 199, 0.4);
+	&:hover {
+		box-shadow: 0 10px 5px -8px rgba(20, 152, 199, 0.6);
+		transform: scale3d(.95,.95,1)
+	}
+
+}
+
+
+h1 {
+	text-align: center;
+	color: #A3E1F0;
+}
+
+
+.item_doppler {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 3;
+	background-color: rgba(0,0,0,.4);
+	transition: .3s;
+}
+
+.row_doppler .col_doppler .gogogo {
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	// background-image: -webkit-linear-gradient(bottom, rgba(106,191,221,.5) 0, rgba(163,225,240,0) 100%);
+	background-color: rgba(106,191,221,0);
+	font-size: 50px;
+	color: rgba(0,0,0,0);
+	text-decoration: none;
+	transition: .4s;
+	span {
+		position: relative;
+		top: calc(50% - 12px);
+	}
+	
+}
+
+
+
+.row_doppler .col_doppler .gogogo:hover {
+	background-color: rgba(106,191,221,.8);
+	color: rgba(255,255,255,1);
+}
+
+
+@media screen and (max-width:992px){
+	.col_doppler{ width: 45%; margin: 2.5%; }
+}
+
+
+@media screen and (max-width:768px){
+	.col_doppler{ width: 100%; }
+
+}
+
+// ----------------------form--------------------
+
+.form_all {
+	transform: translate(0,-10%);
+	animation: form_gogo .7s cubic-bezier(1,-0.07,.47,1.22) 1;
+	#idea_name {
+		border: 0px;
+		height: 30px;
+		border-radius: 20px;
+		cursor: pointer;
+		text-align: center;
+		padding: 20px 10px;
+		box-shadow: 0px -2px 0 0 rgba(0,0,0,.1),0px 2px 0 0 rgba(255,255,255,3);
+		outline: none;
+	}
+	#idea_description {
+		outline: none;
+		text-align: center;
+		cursor: pointer;
+		border: 0px;
+		border-radius: 2px;
+		height: 70px;
+		padding: 10px 10px;
+		box-shadow: 0px -2px 0 0 rgba(0,0,0,.1),0px 2px 0 0 rgba(255,255,255,3);
+	}
+	#idea_picture {
+		opacity: 0;
+		padding: 20px 0 ;
+	}
+	#real_file {
+		position: relative;
+		width: 40%;
+		height: 35px;
+		cursor: pointer;
+		left: 30%;
+		border-radius: 20px;
+		background-color: #455762;
+		color: #fff;
+		line-height: 35px;
+		font-size: 15px;
+		opacity: .5;
+		transition:.3s;
+		transform: translate3d(-120px,-60px,0);
+	}
+	#real_file:hover {
+		opacity: 1;
+	}
+	.actions {
+		input {
+			position: absolute;
+			bottom: 50px;
+			width: 50%;
+			height: 60px;
+			left: 25%;
+			border: 0 none;
+			border-radius: 30px;
+			color: #fff;
+			background-image: -webkit-linear-gradient(left, #FDE5A6 0, #FAC76D 100%);
+			box-shadow: 0 15px 30px -9px rgba(251,193,93,.8);
+			transition:.3s;
+			animation: form_actions_gogo .7s .1s cubic-bezier(1,-0.07,.47,1.22) 1;
+			&:hover {
+				box-shadow: 0 3px 3px 0px rgba(251,193,93,1);
+				transform: scale3d(.95,.95,1);
+			}
+
+		}
+	}
+
+}
+
+
+.form_title {
+	font-family: Comic Sans MS;
+	position: relative;
+	top: 0px;
+	color: #fff;
+	text-shadow: 0px 15px 20px rgba(8,155,200,.4),0px 3px 10px rgba(8,155,200,.6);
+	z-index: 99;
+	font-size: 60px;
+	transform: translate(0,50%);
+	animation: form_title_gogo .7s .1s cubic-bezier(1,-0.07,.47,1.22) 1;
+
+}
+
+.form_doppler {
+	position: relative;
+	left: 50%;
+	width: 600px;
+	max-width: 600px;
+	transform: translate3d(-50%,0,0);
+	text-align: center;
+	background-image: -webkit-linear-gradient(top, #A3E1F0 0, #6ABFDD 100%);
+	padding: 100px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    box-shadow: 0px 28px 30px -20px rgba(8,155,200,.5);
+    color:#4C8FBF;
+}
+
+#idea_picture {
+	margin: 0 auto;
+	width: 35%;
+}
+
+
+@keyframes form_gogo{
+	  0%{ opacity: 0; transform: translate(0,20%);}
+	  100%{ opacity: 1; transform: translate(0,-10%);}
+}
+
+@keyframes form_title_gogo{
+	  0%{ transform: translate(0,100%) }
+	100%{ transform: translate(0,50%)}
+}
+
+@keyframes form_actions_gogo{
+	  0%{ transform: translate(0,100%) }
+	100%{ transform: translate(0,0%) }
+}
