--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,31 +1,16 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Listing Ideas</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Picture</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @ideas.each do |idea| %>
-      <tr>
-        <td><%= idea.name %></td>
-        <td><%= idea.description %></td>
-        <td><%= idea.picture %></td>
-        <td><%= link_to 'Show', idea %></td>
-        <td><%= link_to 'Edit', edit_idea_path(idea) %></td>
-        <td><%= link_to 'Destroy', idea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Idea', new_idea_path %>
+<% @ideas.each do |idea| %>
+  <div class="row_doppler">
+    <%# group.compact.each do |idea| %>
+      <div class="col_doppler">
+      <%= link_to idea ,class: "gogogo" do%>
+      	<span><%= idea.name %></span>
+      <% end %>
+      <%= link_to idea ,class: "gogo" do %>
+        <%= image_tag idea.picture_url, width: '105%' if idea.picture.present?%>
+        <% end %>
+      </div>
+    <%# end %>
+  </div>
+<% end %>
