--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Idea</h1>
+<div class="form_all">
+	<h1 class="form_title" >New Idea</h1>
 
-<%= render 'form' %>
+	<div class="form_doppler">
+		<%= render '/layouts/form' %>
+		<label type="file" for="idea_picture" id="real_file">上傳檔案</label>
+	</div>
+</div>
 
-<%= link_to 'Back', ideas_path %>
