--- a/app/views/ideas/new.html.erb
+++ b/app/views/ideas/new.html.erb
@@ -2,7 +2,7 @@
 	<h1 class="form_title" >New Idea</h1>
 
 	<div class="form_doppler">
-		<%= render '/layouts/form' %>
+		<%= render 'form' %>
 		<label type="file" for="idea_picture" id="real_file">上傳檔案</label>
 	</div>
 </div>
