--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Comment</h1>
 
-<%= render '/layouts/form' %>
+<%= render 'form' %>
 
 <%= link_to 'Show', @comment %> |
 <%= link_to 'Back', comments_path %>
