--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Idea</h1>
 
-<%= render '/layouts/form' %>
+<%= render 'form' %>
 
 <%= link_to 'Show', @idea %> |
 <%= link_to 'Back', ideas_path %>
