把第一張圖改大

--- a/app/assets/stylesheets/ideas.scss
+++ b/app/assets/stylesheets/ideas.scss
@@ -7,6 +7,13 @@
 	font-size: 0;
 }
 
+.col_doppler:nth-child(1) {
+		width: 100% !important;
+		margin: 2% 0% 4% !important;
+}
+
+
+
 .col_doppler {
 	position: relative;
 	display: inline-block;
